- add passthrough taps on pill - add timeout for long swipe up - decrease pill width - refactoring

--- a/app/src/main/res/xml/accessibility_service_config.xml
+++ b/app/src/main/res/xml/accessibility_service_config.xml
@@ -4,6 +4,6 @@
                        android:accessibilityEventTypes="typeAllMask"
                        android:accessibilityFeedbackType="feedbackGeneric"
                        android:accessibilityFlags="flagDefault"
-                       android:canRetrieveWindowContent="true"
+                       android:canPerformGestures="true"
                        android:settingsActivity="com.snoopy112.swipeback.MainActivity"
         />
