--- a/app/src/main/res/layout/swipe_pill_layout.xml
+++ b/app/src/main/res/layout/swipe_pill_layout.xml
@@ -5,8 +5,7 @@
 
     <TextView android:id="@+id/swipe_pill"
               android:background="@color/transparent"
-              android:layout_width="match_parent"
-              android:layout_height="12dp"
-              android:clickable="false"/>
+              android:layout_width="160dp"
+              android:layout_height="12dp"/>
 
 </RelativeLayout>
